syntax = "proto3";
package sales;

option go_package = "pb/sales;sales";
option java_package = "com.wiradata.erpapplication.sales";
option java_multiple_files = true;

import "sales/sales_message.proto";
import "sales/generic_message.proto";

message ListSalesRequest {
  Pagination pagination = 1;
  string branch_id = 2;
  string customer_id = 3;
  string salesman_id = 4;
}

message SalesPaginationResponse {
  Pagination pagination = 1;
  string branch_id = 2;
  string customer_id = 3;
  string salesman_id = 4;
  uint32 count = 5;
}

message ListSalesResponse {
  SalesPaginationResponse pagination = 1;
  Sales sales = 2; 
}

service SalesService {
  rpc SalesCreate(Sales) returns (Sales) {}
  rpc SalesUpdate(Sales) returns (Sales) {}
  rpc SalesView(Id) returns (Sales) {}
  rpc SalesList(ListSalesRequest) returns (stream ListSalesResponse) {}
}